@@ -24,38 +24,62 @@
 
 package pt.unl.fct.microservicemanagement.mastermanager.users;
 
-import java.util.Collections;
+import org.springframework.context.annotation.Lazy;
+import pt.unl.fct.microservicemanagement.mastermanager.exceptions.EntityNotFoundException;
+
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
 
 @Service
 public class UsersService implements UserDetailsService {
 
   private final UsersRepository users;
+  private final PasswordEncoder encoder;
 
-  public UsersService(UsersRepository users) {
+  public UsersService(UsersRepository users, @Lazy PasswordEncoder encoder) {
     this.users = users;
+    this.encoder = encoder;
+  }
+
+  public UserEntity addUser(UserEntity userEntity) {
+    userEntity.setPassword(encoder.encode(userEntity.getPassword()));
+    return users.save(userEntity);
+  }
+
+  public UserEntity addUser(String firstName, String lastName, String username, String password, String email,
+                            UserRole role) {
+    UserEntity user = UserEntity.builder()
+        .firstName(firstName)
+        .lastName(lastName)
+        .username(username)
+        .password(encoder.encode(password))
+        .email(email)
+        .role(role)
+        .build();
+    return users.save(user);
   }
 
   @Override
-  public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+  public UserDetails loadUserByUsername(String username) {
     UserEntity user = users.findByUsername(username);
     if (user == null) {
-      throw new UsernameNotFoundException(username);
+      throw new EntityNotFoundException(UserEntity.class, "username", username);
     }
-    return new User(username,
-        user.getPassword(),
-        Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name())));
+    return new User(username, user.getPassword(), List.of(new SimpleGrantedAuthority(user.getRole().name())));
   }
+
+  public boolean hasUser(String username) {
+    return users.hasUser(username);
+  }
+
 
   @Bean
   public PasswordEncoder encoder() {
